# softup

./: pyproject.toml
src/softup/: main.py
