[project]
name = "softup"
version = "0.1.0"
description = "Package to search updates for softwares/packages"
authors = [
    {name = "Matteo Miotto", email = "miotsdata@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
